# make-cargo

./: .gitignore  .gitmodules  Cargo.toml  GNUmakefile  README.md  cargo.mk  index.html
public/: index.html  main.css
src/: main.rs
